maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:54: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
    if (booldessus) {marquerCasesAdjacentes((pos(0),pos(1)-1))}
                                            ^JediEscaper:55: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
    if (booldroite) {marquerCasesAdjacentes((pos(0)+1,pos(1)))}
                                            ^JediEscaper:56: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
    if (booldessous) {marquerCasesAdjacentes((pos(0),pos(1)+1))}
                                             ^JediEscaper:57: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
    if (boolgauche) {marquerCasesAdjacentes((pos(0)-1,pos(1)))}
                                            ^